tests/evaluator/should_pass/strings.csp
test1 = let f('c') = true within f(head("c"))
test2 = let f("c") = true within f(<'c'>)
