tests/evaluator/should_fail/invalid_list_pattern.csp
test1 = let f(xs^ys) = True within f(<>)
